Removed ethGasStationProvider and added basic README
Removed ethGasStationProvider and added basic README

--- a/GasApp/Dockerfile
+++ b/GasApp/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18.4.0
 WORKDIR /app
 
 COPY ["package.json", "package-lock.json*", "./"]
-COPY ["baseGasProvider.js", "ethGasStationProvider.js", "etherscanGasProvider.js", "gasProviders.js", "./"] 
+COPY ["baseGasProvider.js", "etherscanGasProvider.js", "gasProviders.js", "./"] 
 COPY ["main.js", "redis_client.js", "server.js", "serverUtils.js", "timeUtils.js", "./"]
 COPY ["baseLogProvider.js", "consoleLogProvider.js", "logProviders.js", "./"]
 COPY ["conf/.env", "./"]
