Further README updates
Further README updates

--- a/Redis/Dockerfile
+++ b/Redis/Dockerfile
@@ -3,8 +3,7 @@ FROM ubuntu:18.04
 # COPY ["conf/redis_6379.sh", "/etc/init.d/"]
 
 # Install redis
-RUN apt update -y
-RUN apt-get install redis -y
+RUN apt update -y && apt-get install redis -y
 
 # set up my own config
 COPY ["conf/redis.conf", "/etc/redis/"]
